0023370: MSVC++ warnings issued during compilation for 64bits, WNT_FontMapEntry.cxx

Replaced 'int' with 'Standard_Size' to avoid compiler warning.